--- a/templates/authapp/home.html
+++ b/templates/authapp/home.html
@@ -44,7 +44,7 @@
       <div class="quick-access-card">
         <h6>Totál de colaboradores</h6>
         <p>{{ total_colaboradores|default:"0" }}</p>
-        <a href="#" class="btn btn-success btn-sm">Ir →</a>
+        <a href="{% url 'user_dashboard' %}" class="btn btn-success btn-sm">Ir →</a>
       </div>
     </div>
     <div class="col-md-3 mb-1">
