--- a/templates/recognitions/user/_cards.html
+++ b/templates/recognitions/user/_cards.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% for rec in feed %}
-  <div class="card shadow-sm mb-4 overflow-hidden post-card">
+  <div class="card shadow-sm mb-4 overflow-hidden post-card" id="recognition-{{ rec.id }}">
 
     {# Cabecera #}
     <div class="card-body d-flex align-items-center gap-3 pb-2 pt-3">
