--- a/templates/org_chart/_base_chart.html
+++ b/templates/org_chart/_base_chart.html
@@ -1,2 +1,2 @@
 {# templates/org_chart/_base_chart.html #}
-<div id="chart-container" class="chart-container" style="height: 1200px; background-color: #9e9e9eff;"></div>
+<div id="chart-container" class="chart-container" style="height: 1200px;"></div>
