--- a/templates/org_chart/admin/org_chart_admin.html
+++ b/templates/org_chart/admin/org_chart_admin.html
@@ -54,14 +54,19 @@
 
   <!-- 🔹 Panel lateral para la tarjeta de presentación -->
   <div id="profile-panel" class="profile-panel">
+    
     <div class="profile-panel-header">
       <button id="profile-close" class="profile-close">&times;</button>
-      <div id="profile-name" class="profile-name">Nombre</div>
+      
       <div class="profile-avatar-wrapper">
         <img id="profile-photo" src="" alt="Foto" class="profile-avatar">
       </div>
     </div>
+
     <div class="profile-panel-body">
+      
+      <div id="profile-name" class="profile-name">Nombre del Colaborador</div>
+
       <div class="profile-item">
         <div class="profile-label">Puesto</div>
         <div id="profile-title" class="profile-value"></div>
